examples/errors/local_case/main.lc

function main() {
    let A = 3;
    print(A);
}
